--- a/tutorial/2. Variables.md
+++ b/tutorial/2. Variables.md
@@ -1,4 +1,4 @@
-![[./Pasted image 20230904233651.png]]
+![image](https://github.com/aswinbennyofficial/Golang/assets/110408942/0b9ec672-dd5f-4a0f-8961-a2ed24da7853)
 
 ### Declare variables
 ```go
