--- a/tutorial/2. Variables.md
+++ b/tutorial/2. Variables.md
@@ -41,7 +41,8 @@ fmt.Println(*ptr);
 
 ---
 ### Memory Location
-![[Pasted image 20231127212905.png]]
+![image](https://github.com/aswinbennyofficial/Golang/assets/110408942/ec65f4aa-6c2c-4a3e-a7c5-f15f11555796)
+
 
 - heap : global variable
 - stack : local variable
